--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html lang="en" ng-app="myApp" class="no-js">
+ 
  <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -22,8 +23,7 @@
     <![endif]-->
     <div class="content" ng-view>
     </div>
-    <!-- 
-    In production use:
+    <!--    In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
     -->
     <script src="js/vendor/angular.js"></script>
